# circle-collision-simulator

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yaml
inc/: collision.h  params.h  simd.h  simulation.h
src/: collision.cpp  main.cpp  params.cpp  simulation.cpp
